Tried to fix the alignment issue in the footer. Still not 100%.

--- a/My_Portfolio/resume.css
+++ b/My_Portfolio/resume.css
@@ -249,7 +249,7 @@ a:active {
 
 footer {
   width: 100%;
-  height: 10rem;
+  height: 8rem;
   padding-top: 2rem;
   display: flex;
   justify-content: space-around;
@@ -258,16 +258,18 @@ footer {
   color: var(--gainsboro);
 }
 
-.icons {
+#icons {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  padding-left: 0;
-  margin-top: 0px;
+  padding: 1rem 0;
+  margin: 0;
 }
 
 .icon {
   width: 50px;
   list-style-type: none;
+  align-self: center;
 }
 
 .icon-img {
